force-app/main/default/objects/Dbj1__c/Dbj1__c.object-meta.xml
<CustomObject>
    <description>11</description>
    <label>Dbj1</label>
    <nameField>
        <label>Dbj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dbj1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>