force-app/main/default/objects/Dbj1__c/fields/dxfield1__c.field-meta.xml
<CustomField>
    <fullName>dxfield1__c</fullName>
    <label>dxfield1</label>
    <length>2</length>
    <type>Text</type>
</CustomField>