force-app/main/default/objects/Dbj1__c/fields/F1__c.field-meta.xml
<CustomField>
    <fullName>F1__c</fullName>
    <description>may4th</description>
    <label>F1</label>
    <length>37</length>
    <type>Text</type>
</CustomField>