force-app/main/default/objects/Dbj1__c/fields/F2__c.field-meta.xml
<CustomField>
    <fullName>F2__c</fullName>
    <description>test12may13</description>
    <label>F2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>