force-app/main/default/objects/Dbj1__c/fields/F3__c.field-meta.xml
<CustomField>
    <fullName>F3__c</fullName>
    <label>F3</label>
    <length>5</length>
    <type>Text</type>
</CustomField>