force-app/main/default/objects/Dbj1__c/fields/searchResultField__c.field-meta.xml
<CustomField>
    <fullName>searchResultField__c</fullName>
    <label>searchResultField</label>
    <length>2</length>
    <type>Text</type>
</CustomField>