force-app/main/default/objects/Dbj1__c/fields/testfield__c.field-meta.xml
<CustomField>
    <fullName>testfield__c</fullName>
    <label>testfield</label>
    <length>2</length>
    <type>Text</type>
</CustomField>