force-app/main/default/objects/Dbj1__c/recordTypes/Dbj_RC1.recordType-meta.xml
<RecordType>
    <fullName>Dbj_RC1</fullName>
    <active>true</active>
    <label>Dbj_RC1</label>
</RecordType>