force-app/main/default/objects/Dbj1__c/recordTypes/Dbj_RC2.recordType-meta.xml
<RecordType>
    <fullName>Dbj_RC2</fullName>
    <active>false</active>
    <label>Dbj_RC2</label>
</RecordType>